--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,13 @@ nav {
   width: 650px; /* you can adjust this */
   height: auto;
 }
+@media(max-width:600px){
+.home-image-container {
+  display: flex;
+ align-items: center;
+  margin-right: 3rem;
+}
+}
 
 .home-bannerImage-container {
   position: absolute;
@@ -280,6 +287,7 @@ nav {
   box-sizing: border-box;
   border-radius: 1rem;
   border: 2px solid #757070; /* Adds a black border, 2px thick */
+  padding-top: 2rem ;
 }
 .work-section-top p {
   text-align: center;
@@ -299,7 +307,7 @@ nav {
   min-height: 350px;
   background-color: white;
   padding: 1rem 2rem;
-  display: flex;
+  display: grid;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -307,13 +315,16 @@ nav {
   border-radius: 1rem;
   color: #505050;
   margin: 1rem 2rem;
+   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  transition: transform 0.3s ease;
 }
 .work-section-info h2 {
   margin: 1rem 0rem;
 }
-.work-section-buttom {
+.work-section-card {
   margin-top: 5rem;
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -444,7 +455,7 @@ nav {
     display: none;
   }
 }
-.work-section-buttom {
+.work-section-card {
   display: flex;
   justify-content: space-around; /* or space-between, or center */
   align-items: flex-start;
@@ -486,7 +497,7 @@ nav {
 }
 
 /* ===== SINGLE CARD STYLING ===== */
-.testimonial-card {
+.testimonial-card{
   background-color: white;
   padding: 2rem;
   border-radius: 1rem;
@@ -494,12 +505,15 @@ nav {
   text-align: center;
   transition: transform 0.3s ease;
 }
-
-.testimonial-card:hover {
+.work-section-info:hover{
+  transform:translateY(-5px)
+}
+.testimonial-card:hover{
   transform: translateY(-5px);
 }
 
-.testimonial-img {
+.testimonial-img 
+.info-boxes-img-container{
   width: 100px;
   height: 100px;
   object-fit: cover;
